<resources>
    <string name="app_name">DyslexiaScanner</string>

    <string name="hello">Hello!</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="welcome">Welcome!</string>
    <string name="lets_create_account">Let\'s Create an Account!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="passwordconf">Confirm Password</string>
    <string name="name">Full Name</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="have_account">Have an account? </string>
    <string name="LOGIN">LOGIN</string>
    <string name="Login">Login</string>
    <string name="Logout">Logout</string>
    <string name="logo">logo</string>
    <string name="Hi">Hi!</string>
    <string name="how_are_you">How are you?</string>
    <string name="article">Article</string>
    <string name="scan_handwriting">Scan Your \nHandwriting</string>
    <string name="How_to_use">How to use</string>
    <string name="scan_camera">Scan with camera</string>
    <string name="insert_image">Insert image from gallery</string>
    <string name="please_insert">Please scan or insert your handwriting image from the gallery</string>
    <string name="how_to_use_desc">Dyslexia Scanner quickly detects dyslexic traits in children\'s handwriting. Capture samples, get instant feedback, and access educational resources for proactive intervention. Focused on kindergarten to elementary school, it\'s a user-friendly tool supporting parents and educators. More than an app, it promotes inclusivity and awareness, ensuring no child is left behind.</string>
    <string name="btn_result">Cek Result</string>
    <string name="camera_permission_required">Camera permission is required to use the camera.</string>
    <string name="storage_permission_required">Storage permission is required to access gallery.</string>
    <string name="login_fill_required">Please fill in all columns first.</string>
    <string name="password_confirmation_mismatch">Confirm Password Must Be the Same!</string>
    <string name="fill_all_fields">Please fill in all columns first.</string>
    <string name="detail">Detail</string>
    <string name="result">Result:</string>
    <string name="diagnosis">Diagnosis:</string>
    <string name="scan_result">Scan Result</string>
    <string name="tv_diagnosis">Congratulation, you are normal.</string>
    <string name="tv_result">00.00%</string>
    <string name="detail_chat">To find out more about your childs condition, you can discuss with your doctor <font color="#FFC354">here</font>.</string>
    <string name="empty_image_warning">Please insert the image file first.</string>
    <string name="online">Online</string>
    <string name="CHAT">Chat</string>
    <string name="chat">Consultation</string>
    <string name="profile">Profile</string>
    <string name="fullname">Full Name</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>